@@ -34,13 +34,15 @@
 
 			<p>
 				Mirage source code is available here:&nbsp;&nbsp;<a href="http://download.berlios.de/mirageiv/mirage-0.9.tar.gz">mirage-0.9.tar.gz</a>&nbsp;&nbsp;&nbsp;<a href="http://download.berlios.de/mirageiv/mirage-0.9.tar.bz2">mirage-0.9.tar.bz2</a><br /><br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ubuntu: package <a href="http://mirror2.ubuntulinux.nl/dists/edgy-seveas/extras/">here</a> (Dennis Kaarsemaker)<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Archlinux: Enable community and pacman -S <a href="http://aur.archlinux.org/packages.php?do_Details=1&ID=4656">mirage</a> (William Rea)<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gentoo: Package is available in <a href="http://packages.gentoo.org/packages/?category=media-gfx;name=mirage">Portage</a> (David Shakaryan)<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fedora Core 6: Package is <a href="http://fedoraproject.org/extras/6/i386/repodata/repoview/graphics.group.html">here</a> (Mamoru Tasaka)<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Frugalware: Enable extra and pacman -S <a href="http://frugalware.org/packages/10172">mirage</a> (Priyank)<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Foresight Linux: package <a href="http://www.rpath.org/repos/foresight/troveInfo?t=mirage">here</a> (Paul Scott-Wilson)<br />
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slackware: Package is <a href="http://www.johannes-schoepfer.de/slackware/11.0/mirage-0.8.3-i686-1js.tgz">here</a> (Johannes Schöpfer)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Archlinux: pacman -S <a href="http://aur.archlinux.org/packages.php?do_Details=1&ID=4656">mirage</a> (William Rea)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Debian: In <a href="http://packages.debian.org/unstable/graphics/mirage">sid</a> (Xavier Oswald)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gentoo: Package is available in <a href="http://gentoo-portage.com/media-gfx/mirage">Portage</a> (David Shakaryan)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fedora Core 7: Package is <a href="http://fr.rpmfind.net/linux/fedora/core/7/Everything/source/SRPMS/">here</a><br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Frugalware: Package <a href="http://frugalware.org/packages/26064">here</a> (Priyank)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Foresight: package <a href="http://www.rpath.org/repos/foresight/troveInfo?t=mirage">here</a> (Paul Scott-Wilson)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nokia: Maemo package <a href="https://garage.maemo.org/projects/mirage">here</a> (Daniel Martín Yerga)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slackware: Package is <a href="http://johannes-schoepfer.de/slackware/">here</a> (Johannes Schöpfer)<br />
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ubuntu: Package for <a href="http://packages.ubuntu.com/gutsy/x11/mirage">gutsy</a> <br />
 			</p>
 
 			<p>
